--- a/Gestor de clinica por capas/capaDatosNegocios/capaDatosNegocios.csproj
+++ b/Gestor de clinica por capas/capaDatosNegocios/capaDatosNegocios.csproj
@@ -42,10 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Citas.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="Doctor.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Notificaciones.cs" />
+    <Compile Include="Paciente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="storedProcedure.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
