--- a/Gestor de clinica por capas/capaPresentacion/capaPresentacion.csproj
+++ b/Gestor de clinica por capas/capaPresentacion/capaPresentacion.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="citas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="citas.Designer.cs">
+      <DependentUpon>citas.cs</DependentUpon>
+    </Compile>
     <Compile Include="doctor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -93,6 +99,9 @@
     <Compile Include="SplashScreen.Designer.cs">
       <DependentUpon>SplashScreen.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="citas.resx">
+      <DependentUpon>citas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="doctor.resx">
       <DependentUpon>doctor.cs</DependentUpon>
     </EmbeddedResource>
