--- a/Gestor de clinica por capas/capaDatosNegocios/capaDatosNegocios.csproj
+++ b/Gestor de clinica por capas/capaDatosNegocios/capaDatosNegocios.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseDatos.cs" />
     <Compile Include="Citas.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="Doctor.cs" />
