--- a/Gestor de clinica por capas/capaPresentacion/capaPresentacion.csproj
+++ b/Gestor de clinica por capas/capaPresentacion/capaPresentacion.csproj
@@ -76,6 +76,12 @@
     <Compile Include="aboutUs.Designer.cs">
       <DependentUpon>aboutUs.cs</DependentUpon>
     </Compile>
+    <Compile Include="instaladorBD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="instaladorBD.Designer.cs">
+      <DependentUpon>instaladorBD.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="aboutUs.resx">
       <DependentUpon>aboutUs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="instaladorBD.resx">
+      <DependentUpon>instaladorBD.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
